# xiaozhi-esp32s3-korvor1-v5

build-backup/: .bin_timestamp  .ninja_deps  .ninja_log  0.p3.S  1.p3.S  3.p3.S  4.p3.S  8.p3.S  CMakeCache.txt  activation.p3.S  cmake_install.cmake  err_reg.p3.S  flash_app_args  flash_args.in  flash_project_args  kconfigs.in  kconfigs_projbuild.in  low_battery.p3.S  popup.p3.S  project_description.json  welcome.p3.S  wificonfig.p3.S
build-backup-0813/: .bin_timestamp  .ninja_deps  .ninja_log  2.p3.S  5.p3.S  6.p3.S  7.p3.S  9.p3.S  CMakeCache.txt  config.env  err_pin.p3.S  exclamation.p3.S  flasher_args.json  ldgen_libraries  ldgen_libraries.in  project_description.json  success.p3.S  upgrade.p3.S  vibration.p3.S  wifi_configuration.html.S  wifi_configuration_done.html.S  x509_crt_bundle.S
build-backup-0813/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  bootloader.elf  bootloader.map  build.ninja  kconfigs_projbuild.in
build-backup-0813/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build-backup-0813/gdbinit/: gdbinit
docs/: robot-voice-control-simplified.md  robot-voice-control-summary.md  robot-voice-control.md
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  mcp_server.cc  robot_config.h  robot_movement_controller.cc  robot_movement_controller.h  robot_test.cc
ros_esp32_bridge/: CMakeLists.txt  LAUNCH_GUIDE.md  README.md  package.xml  test_frame_format.py  test_serial_send.py  test_ubuntu_setup.sh
ros_esp32_bridge/config/: bridge_config.yaml
ros_esp32_bridge/launch/: esp32_bridge.launch.py
ros_esp32_bridge/src/: esp32_robot_bridge.cpp
(+233 files in other folders)
